Fix refine button on IE

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -135,6 +135,7 @@ body {
 
 .header .h-search .form-input {
     font-size: 80%;
+    line-height: 18px;
 }
 
 .header .h-search select.form-input {
